--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.18",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.18",
+    "@mui/x-data-grid": "^7.5.1",
     "@types/axios": "^0.14.0",
     "html2pdf.js": "^0.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-to-print": "^2.15.1"
+    "react-hook-form": "^7.51.5",
+    "react-router-dom": "^6.23.1",
+    "react-to-print": "^2.15.1",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
